screen (4.2.1-4) UNRELEASED; urgency=low

  * Drop dh_installchangelogs override to install the new ChangeLog to
    /usr/share/doc/screen/changelog.gz
  * Mention in README.source that Grml's Jenkins builds screen snapshots.

 -- Axel Beckert <abe@debian.org>  Sat, 11 Oct 2014 22:11:57 +0200

screen (4.2.1-3) unstable; urgency=low

  * Cherry-pick 7d8fd3ad from upstream to fix segfaults with full screen
    text-mode applications and altscreen on (Closes: #681572)
  * Cherry-pick 8ffd5f46 from upstream to fix caption/hardstatus color
    rendering errors (Closes: #731388, LP: #1257895)
  * Add a very simple TAP-based DEP8 test suite under debian/tests/t.
  * Change Vcs-Browser header to new cgit web interface.
  * Bump Standards-Version to 3.9.6 (no changes needed)
  * Add lintian overrides for configure-generated-file-in-source as
    config.{log,status} are listed in debian/clean.

 -- Axel Beckert <abe@debian.org>  Thu, 09 Oct 2014 03:19:07 +0200

screen (4.2.1-2) unstable; urgency=low

  * Upload to unstable again
  * Enable parallel building

 -- Axel Beckert <abe@debian.org>  Sat, 26 Jul 2014 14:05:20 +0200

screen (4.2.1-1) experimental; urgency=low

  * New upstream release

    Dropped patches applied or obsoleted upstream:
    + 01configure_fix_alpha_vsprintf.patch
    + 03-fix-terminal-handling-on-kfreebsd.patch
    + 05fix_osdef_include.patch
    + 06-fix-parallel-build.patch
    + 10norootpassword.patch
    + 12kfreebsd_ctty.patch
    + 14size_matters.patch
    + 16fix_gcc_warnings.patch
    + 22exchange_file_mode.patch
    + 23exitcode_q_ls.patch
    + 24option_parser.patch
    + 32misc_minor_fixes.patch
    + 46fix-keybinding-typo-in-manpage.patch
    + 47screen-cc.patch
    + 49long-usernames.patch
    + 50increase-max-TERM-length.patch
    + 51fix-utf8-status-padding-bug.patch
    + 53fix-startup-race-condition.patch
    + 59-fix-manpage-warnings.patch
    + 61-allow-dev-console-to-be-a-symlink.patch
    + 62-prevent-repeated-title-prompt.patch
