@@ -3,6 +3,7 @@ screen (4.2.1-4) UNRELEASED; urgency=low
   * Drop dh_installchangelogs override to install the new ChangeLog to
     /usr/share/doc/screen/changelog.gz
   * Mention in README.source that Grml's Jenkins builds screen snapshots.
+  * Rewrite 80EXP_session_creation_time.patch header to be DEP3 compliant.
 
  -- Axel Beckert <abe@debian.org>  Sat, 11 Oct 2014 22:11:57 +0200
 
